--- a/SpendingManagement/SpendingManagement/wwwroot/css/site.css
+++ b/SpendingManagement/SpendingManagement/wwwroot/css/site.css
@@ -20,3 +20,36 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.filter{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+/* Sidebar styling */
+.sidebar {
+    height: 100vh;
+    width: 250px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #f8f9fa;
+    padding-top: 20px;
+    border-right: 1px solid #ddd;
+}
+
+    .sidebar .nav-link {
+        font-size: 18px;
+        padding: 12px;
+        color: #333;
+    }
+
+        .sidebar .nav-link:hover {
+            background-color: #e9ecef;
+            border-radius: 5px;
+        }
+
+.content {
+    margin-left: 260px;
+    padding: 20px;
+}
