--- a/SpendingManagement/SpendingManagement/Pages/Login.cshtml
+++ b/SpendingManagement/SpendingManagement/Pages/Login.cshtml
@@ -36,6 +36,7 @@
         </form>
 
         <div class="mt-3 text-center">
+            <a href="/Signup" class="text-decoration-none text-black">Sign up</a>
             <a href="/ForgotPassword" class="text-decoration-none">Forgot Password?</a>
         </div>
     </div>
