--- a/SpendingManagement/SpendingManagement/Pages/Profile.cshtml
+++ b/SpendingManagement/SpendingManagement/Pages/Profile.cshtml
@@ -3,7 +3,7 @@
 
 <div class="mt-4 p-4 bg-white shadow-sm rounded text-center">
     <!-- Profile Picture -->
-    <img src="~/images/avatar.jpg" class="rounded-circle mb-3" alt="Profile Picture">
+    <img src="~/images/avatar.jpg" class="rounded-circle mb-3" width="50px" height="50px" alt="Profile Picture">
 
     <!-- User Details -->
     <h4 class="fw-bold">@Model.CurrentUser?.Username</h4>
