--- a/SpendingManagement/SpendingManagement/Pages/AddTransaction.cshtml
+++ b/SpendingManagement/SpendingManagement/Pages/AddTransaction.cshtml
@@ -7,7 +7,7 @@
 <div class="container p-3">
     <!-- Header -->
     <div class="d-flex justify-content-between align-items-center">
-        <a asp-page="/Transactions" asp-route-walletId="@Model.WalletId" class="text-primary">Cancel</a>
+        <a asp-page="/Transactions" class="text-primary">Cancel</a>
         <h5 class="m-0">Add Transaction</h5>
     </div>
 
